fixed typo in graph

--- a/risk_return_analysis.ipynb
+++ b/risk_return_analysis.ipynb
@@ -782,7 +782,7 @@
     "# Visualize the cumulative returns using the Pandas plot function\n",
     "# Include a title parameter and adjust the figure size\n",
     "# General Overlay of all 4 funds and the S&P 500\n",
-    "cumulative_returns.plot(figsize=(20,10), title='4 Whale Overlayd and overall market of Cumulative Returns')"
+    "cumulative_returns.plot(figsize=(20,10), title='4 Whale Overlay and overall market of Cumulative Returns')"
    ]
   },
   {
